force-app/main/default/objects/User/fields/AddressCoordinates__c.field-meta.xml
<CustomField>
    <fullName>AddressCoordinates__c</fullName>
    <label>Localização Geográfica</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>