force-app/main/default/objects/User/fields/CPFTxt__c.field-meta.xml
<CustomField>
    <fullName>CPFTxt__c</fullName>
    <externalId>true</externalId>
    <label>CPF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>