force-app/main/default/objects/User/fields/SAPCode__c.field-meta.xml
<CustomField>
    <fullName>SAPCode__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>32</length>
    <type>Text</type>
</CustomField>